PROJECT(StateMachine-test CXX)

# Always compile as debug
SET(CMAKE_BUILD_TYPE "DEBUG")

#FILE(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
#LIST(REMOVE_ITEM SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")

#ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ALL_LIBS})

FILE(GLOB TESTS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(TESTNAMECPP ${TESTS})
	GET_FILENAME_COMPONENT(TESTNAME ${TESTNAMECPP} NAME_WE)
	ADD_EXECUTABLE(${TESTNAME} ${TESTNAMECPP})
	#TARGET_LINK_LIBRARIES(${TESTNAME} ${PROJECT_NAME})
	ADD_TEST(${TESTNAME} ${TESTNAME})
endforeach(TESTNAMECPP)
